syntax = "proto3";

package api.doc.v1;

import "google/api/annotations.proto";

option go_package = "atlas-doc/api/doc/v1;v1";
option java_multiple_files = true;
option java_package = "api.doc.v1";

service File {
  rpc Download (IdReq) returns (DownloadFileReply) {
    option (google.api.http) = {
      get: "/v1/file/download"
    };
  };
  rpc UploadFile(UploadFileReq) returns (UploadFileReply);

  rpc GetFileInfo(IdReq) returns (FileInfoReply){
    option (google.api.http) = {
      get: "/v1/file/info/{id}"
    };
  };
  rpc ListFile(ListFileReq) returns (ListFileReply){
    option (google.api.http) = {
      post: "/v1/file/list",
      body: "*"
    };
  };
  rpc SaveFile(EditFileReq) returns (EmptyReply){
    option (google.api.http) = {
      post: "/v1/file/save",
      body: "*"
    };
  };
  rpc UpdateFile(EditFileReq) returns (EmptyReply){
    option (google.api.http) = {
      put: "/v1/file/update",
      body: "*"
    };
  };
  rpc DeleteFile(IdReq) returns (EmptyReply){
    option (google.api.http) = {
      delete: "/v1/file/delete/{id}"
    };
  };
}


message UploadFileReq{
  bytes file = 1;
  string name = 2;
  int32 fileSize = 3;
}
message UploadFileReply{
  string fileId = 1;
}
message FileInfoReply {
  string uuid = 1;            // 主键
  string file_name = 2;       // 文件名称
  string key_url = 3;         // 地址
  string bucket_name = 4;     // oss桶名
  string endpoint = 5;        // oss端点
  string key_prefix = 6;      // 文件地址目录
  int32 size = 7;            // 大小
  string file_size = 8;       // 文件大小
  string create_by = 9;      // 创建者
}
message ListFileReply {
  repeated FileInfoReply rows = 1;
  int64 total = 2;
}
message ListFileReq {
  //pageNum
  int64 pageNum = 1 ;
  //页面大小
  int64 pageSize = 2 ;
}
message EditFileReq {
  string uuid = 1;            // 主键
  string file_name = 2;       // 文件名称
  string key_url = 3;         // 地址
  string bucket_name = 4;     // oss桶名
  string endpoint = 5;        // oss端点
  string key_prefix = 6;      // 文件地址目录
  int32 size = 7;            // 大小
  string file_size = 8;       // 文件大小
}
message EmptyReply {}
message IdReq {
  string id = 1;
}

message DownloadFileReply {
  string url = 1;
}
